-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.9.0-beta1, Qt Creator 4.9.0-beta2, Qt Creator 4.9.0-rc1, Qt Creator 4.9.0, Qt Creator 4.9.1, Qt Creator 4.10.0-beta1
-
None
-
X86 Ubuntu 18.04 host deploying to X86 Ubuntu 18.04 remote node.
-
-
2f39838170924486ac4e93b3797ca2122ca5a78d (qt-creator/qt-creator/4.10)
Similar to QTCREATORBUG-22041, but that's marked as fixed, so it refers to a different issue (busybox stat) with similar symptoms.
When deploying, QtCreator prints lots of errors, "Unexpected stat output for remote file <file path>". It's worse than just an error: as a result of the failure, it redeploys files which haven't changed, presumably because it can't confirm that they haven't changed. For a project which deploys many files (e.g. qml files), this considerably increases deployment time.
$ stat --version
stat (GNU coreutils) 8.28
Copyright (C) 2017 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>.
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.Written by Michael Meskes.
$ stat /home/username/qml/SomeFile.qml File: /home/username/qml/SomeFile.qml Size: 972 Blocks: 8 IO Block: 4096 regular file Device: 802h/2050d Inode: 147773 Links: 1 Access: (0644/-rw-r--r--) Uid: ( 1000/ username) Gid: ( 1000/ username) Access: 2019-03-18 12:39:34.522852263 +0000 Modify: 2019-03-18 12:39:20.278662903 +0000 Change: 2019-03-18 12:39:20.278662903 +0000 Birth: -
I tried removing the previously deployed files, just in case they had been left in a weird state, but the problem persists. Here the stat -t output for an affected file:
$ stat -t /home/username/qml/FileName.qml /home/username/qml/FileName.qml 2033 8 81b4 1000 1000 802 156140 1 0 0 1556884716 1556884751 1556884751 0 4096
This issue essentially prevents me from upgrading beyond Qt Creator 4.8. I am happy to try running any commands or debug builds you suggest to try to work out what is causing the issue.
- relates to
-
QTCREATORBUG-22041 [REG 4.8 -> 4.9] Remote Linux deployment problems
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-22603 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 266086,2 | RemoteLinux: Add missing check for stat failure | 4.10 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 266109,3 | RemoteLinux: Limit the number of concurrent stat calls | 4.10 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |