RemoteLinux: Add missing check for stat failure

Task-number: QTCREATORBUG-22603
Change-Id: I5f5daefb039e48eb1983cf111859709233ca489a
Reviewed-by: Tom Hall <tahall256@protonmail.ch>
Reviewed-by: hjk <hjk@qt.io>